SERVER-17114 capped cursor should die when falling off the back of collection

(cherry picked from commit 0e523eec39056da5b0dfb3826bbe27b4f376deb6)